--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://github.com/Gronik4/react3.1ctsrf.git",
+  "homepage": "https://gronik4.github.io/react3.1ctsrf/",
   "eslintConfig": {
     "extends": [
       "react-app",
